fix save ocr data, types generate, update api
