# reader-api/docs/swagger.json
@@ -31,6 +31,65 @@
                     }
                 }
             }
+        },
+        "/projects": {
+            "get": {
+                "description": "Retrieves all projects from the database",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "projects"
+                ],
+                "summary": "Get list of projects",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/handlers.Project"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Couldn't get projects: [error message]",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        }
+    },
+    "definitions": {
+        "handlers.Project": {
+            "description": "Represents a project with its details.",
+            "type": "object",
+            "properties": {
+                "ID": {
+                    "type": "string"
+                },
+                "Images": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "Name": {
+                    "type": "string"
+                },
+                "OcrData": {},
+                "createdAt": {
+                    "type": "string"
+                },
+                "updatedAt": {
+                    "type": "string"
+                }
+            }
         }
     }
 }
